# sat74windows

./: CMakeLists.txt  INSTALACJA.txt  install.sh  installer.iss
.github/workflows/: macos.yml  main.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
